# AgentTalk

./: .env.example  .gitignore  1.txt  CLAUDE.md  Phase5-体验打磨计划.md  README.md  docker-compose.yml  开发计划.md  项目优化方向.md  项目优化清单.md  项目简历亮点.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4df052419ff7_create_conversations_and_messages_tables.py  df45acda1759_create_world_books_and_characters_tables.py
backend/app/: main.py
backend/app/api/: auth.py  characters.py  chat.py  events.py  health.py  memory.py  upload.py  worlds.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  permissions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  character.py  character_memory.py  conversation.py  message.py  user.py  world.py
backend/app/schemas/: auth.py  character.py  chat.py  memory.py  world.py
backend/app/services/: auth_service.py  character_service.py  chat_service.py  embedding_service.py  event_bus.py  llm_service.py  memory_service.py  memory_trigger.py  message_service.py  prompt_builder.py  stream_registry.py  stream_service.py  task_tracker.py  token_counter.py  world_service.py
backend/embedding_server/: main.py
backend/scripts/: init_db.py  seed.py
backend/tests/: test_characters.py  test_chat.py  test_health.py  test_prompt_builder.py  test_token_counter.py  test_upload.py  test_worlds.py
docs/: cleanup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  (+1 more)
models/: download_model.py
(+54 files in other folders)
